test/parser/ast/pattern/int_literal_error.exp
Error: Literals cannot appear in variable declaration patterns
test/parser/ast/pattern/int_literal_error.myte:3:8
 3 | val (x, 1, y): Int = 1
   |         ^